group = 'ch.interlis.generator'
version = '1.0.0-SNAPSHOT'

ext {
    ili2cVersion = '5.6.8'
    ehibasicsVersion = '1.4.1'
    ioxIliVersion = '1.24.4'
    postgresVersion = '42.7.7'
    slf4jVersion = '2.0.9'
    logbackVersion = '1.4.14'
    jacksonVersion = '2.16.1'
    picocliVersion = '4.7.7'
    junitVersion = '5.10.1'
    assertjVersion = '3.24.2'
    h2Version = '2.2.224'
    sqliteVersion = '3.45.3.0'
    groovyVersion = '4.0.24'
    jtsVersion = '1.19.0'
    playwrightVersion = '1.60.0'
}

allprojects {
    group = rootProject.group
    version = rootProject.version
}

subprojects {
    repositories {
        mavenCentral()
        maven {
            url = uri('https://jars.interlis.ch/')
        }
    }

    pluginManager.withPlugin('java') {
        java {
            toolchain {
                languageVersion = JavaLanguageVersion.of(17)
            }
            sourceCompatibility = JavaVersion.VERSION_17
            targetCompatibility = JavaVersion.VERSION_17
        }

        tasks.withType(Test).configureEach {
            useJUnitPlatform()
            workingDir = rootProject.projectDir
        }
    }
}

// ---------------------------------------------------------------------------
// Verification profiles (spec Teil V §11)
// ---------------------------------------------------------------------------

tasks.register('verificationFast') {
    group = 'verification'
    description = 'Schnelle Verifikation: alle Unit-Test-Tasks plus statische Verification-Tasks ohne externe Tools.'
    dependsOn(
        ':core:test',
        ':grails-runtime-api:test',
        ':grails-runtime:test',
        ':target-grails:test',
        ':target-django:test',
        ':cli:test',
        ':target-grails:verifyModelCorpusManifest',
        ':target-grails:verifyGenerationOwnershipRules',
        ':verifyJavaTestToolchains'
    )
}

tasks.register('verificationFull') {
    group = 'verification'
    description = 'Vollständige Verifikation: verificationFast plus alle erweiterten Tests im Required-Modus.'
    dependsOn('verificationFast')
    dependsOn(
        ':target-grails:grailsRuntimeSmokeTest',
        ':target-grails:realIli2dbSmokeTest',
        ':target-grails:grailsPostgresContractTest',
        ':target-grails:browserE2eTest',
        ':target-grails:writeVerificationSummary'
    )
    doFirst {
        // Alle erweiterten Tasks laufen im Required-Modus. Die Required-Properties
        // werden über -P auf der Kommandozeile gesetzt (scripts/run-verification-full.sh);
        // der Task verweigert den Lauf, wenn ein erweiterter Test nicht required ist.
        def requiredProperties = [
            'grailsRuntimeSmokeRequired',
            'realIli2dbRequired',
            'contractTestRequired',
            'browserE2eRequired'
        ]
        def missing = requiredProperties.findAll { name ->
            project.findProperty(name) != 'true'
        }
        if (!missing.isEmpty()) {
            throw new GradleException(
                'verificationFull requires all extended tests in required mode; missing: '
                    + missing.collect { "-P${it}=true" }.join(', '))
        }
    }
}

// Acceptanztest (Spezifikation §9.2): Alle Java-Testtasks müssen mit einem
// Java-17-Launcher laufen. Keine Prüfung gegen absolute lokale JDK-Pfade.
tasks.register('verifyJavaTestToolchains') {
    group = 'verification'
    description = 'Prüft, dass alle Java-Testtasks einen Java-17-Launcher verwenden.'
    doLast {
        def violations = []
        allprojects { project ->
            project.plugins.withId('java') {
                project.tasks.withType(Test).configureEach { testTask ->
                    def launcher = testTask.getJavaLauncher().get()
                    def languageVersion = launcher.metadata.languageVersion.asInt()
                    if (languageVersion != 17) {
                        violations.add("${project.path}:${testTask.name} uses Java ${languageVersion}")
                    }
                }
            }
        }
        if (!violations.isEmpty()) {
            throw new GradleException('Java test toolchain violations:\n  ' + violations.join('\n  '))
        }
        logger.lifecycle('verifyJavaTestToolchains: all Java test tasks use launcher language version 17')
    }
}
